# soverign-breach

./: .gitignore  AGENTS.md  ARCHITECTURE_AND_FUTURE_SCOPE.md  DEVELOPMENT_LOG.md  FILE_INTERACTIONS.md  INTERACTION_LOGIC_AUDIT.md  QWEN.md  README.md  SOVEREIGN_BREACH_AI_ROADMAP.md  SOVEREIGN_BREACH_COMPARISON.md  UPLINK_PORTING_STATUS.md  jules_sentinel.py  justfile  mechanics_gameplay.md  mempalace.yaml  pyproject.toml  starting_software.json  web_main.py
.qwen/: PROJECT_SUMMARY.md  settings.json  settings.json.orig
core/: __init__.py  bank_forensics.py  bank_robbery.py  company_engine.py  connection_manager.py  constants.py  engine.py  event_scheduler.py  finance_engine.py  game_state.py  gateway_nuke.py  geodata.py  hardware_engine.py  lan_engine.py  log_suspicion.py  logistics_engine.py  mission_engine.py  name_generator.py  network_graph.py  neuromancer.py  news_engine.py  npc_engine.py  persistence.py  plot_engine.py  pmc_engine.py  remote_controller.py  scenario_heist.py  security_engine.py  store_engine.py  task_engine.py  trace_engine.py  vfs.py  warning_events.py  world_generator.py  world_sim.py
legacy_qt/: main.py  mvp_dashboard.py
prototypes/: detailed_vfs_prototype.html  hardware_prototype.html  hardware_prototype.py  kinetic_bridge_prototype.html  kinetic_bridge_prototype.py  kinetic_engine_prototype.py  map_prototype.html  map_prototype.py  remote_prototype.html  remote_prototype.py  store_prototype.html  store_prototype.py  tactical_sniper_prototype.html  world_sim_prototype.py
tests/: test_advanced.py  test_apps.py  test_arrest.py  test_bail.py  (+54 more)
(+43 files in other folders)
